# downscale_upscale

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  streamlit_app.py
backend/: Dockerfile  main.py
frontend/: Dockerfile  app.py
